Android app documentation added
