# app/Http/Controllers/Answer/AnswerController.php
@@ -10,7 +10,61 @@ use Illuminate\Support\Facades\Validator;
 
 class AnswerController extends Controller
 {
-    public function store(Request $request , Survey $survey)
+   /**
+ * @OA\Post(
+ *     path="/answer/store/{survey}",
+ *     summary="Send answers for a survey",
+ *     description="Submit answers for a survey",
+ *     operationId="AnswerSurveyStore",
+ *     tags={"surveys"},
+ *     @OA\Parameter(
+ *         name="survey",
+ *         in="path",
+ *         description="The ID of the survey",
+ *         required=true,
+ *         @OA\Schema(
+ *             type="string"
+ *         )
+ *     ),
+ *     @OA\RequestBody(
+ *         @OA\JsonContent(
+ *             @OA\Property(property="answers", type="array",
+ *                 @OA\Items(
+ *                     @OA\Property(property="question_id", type="integer"),
+ *                     @OA\Property(property="value", type="string")
+ *                 )
+ *             )
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=200,
+ *         description="Answers successfully stored",
+ *         @OA\JsonContent(
+ *             type="object",
+ *             @OA\Property(property="message", type="string", example="Answers successfully stored")
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=422,
+ *         description="Validation error",
+ *         @OA\JsonContent(
+ *             type="object",
+ *             @OA\Property(property="message", type="object", example={"question_id": {"The question_id field is required."}})
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=500,
+ *         description="Internal server error",
+ *         @OA\JsonContent(
+ *             type="object",
+ *             @OA\Property(property="message", type="string", example="Sorry, an error occurred. Please try again.")
+ *         )
+ *     ),
+ *  security={{"bearerAuth": {}}}
+ * )
+ */
+
+    public function store(Request $request, Survey $survey)
     {
         // return $request->all();
         $answers = $request->answers;
@@ -46,7 +100,5 @@ class AnswerController extends Controller
         return response()->json([
             'message' => 'create the answers success'
         ], 200);
-        
     }
-        
 }
